# reserve-sentinel

./: .gitignore  Anchor.toml  Cargo.toml  README.md  brand.md  package.json  prompt.md
app/: package-lock.json  package.json  tailwind.config.ts
app/app/: error.tsx  globals.css  layout.tsx  loading.tsx  page.tsx
app/app/backtest/: loading.tsx  page.tsx
app/app/basket/: loading.tsx  page.tsx
app/app/compare/[ticker]/: loading.tsx  page.tsx
app/components/: BacktestChart.tsx  BacktestTable.tsx  BasketBuilder.tsx  CrossIssuerView.tsx  IssuerBadge.tsx  ScoreBreakdown.tsx  ScoreCard.tsx  ScoreDial.tsx  ScoreHistory.tsx
app/lib/: anchor.ts  assets.ts  clickhouse.ts  components.ts  format.ts  scoring.ts  utils.ts
app/lib/backtest-data/: crclon.json
app/lib/idl/: reserve_sentinel.json
config/: assets.json
indexer/: go.mod  go.sum
indexer/cmd/indexer/: main.go
indexer/internal/anchor/: anchor.go  roundtrip_live_test.go  state.go
indexer/internal/clickhouse/: clickhouse.go
indexer/internal/config/: config.go
indexer/internal/helius/: webhook.go  webhook_test.go
indexer/internal/pool/: pool.go  pool_live_test.go
indexer/internal/pyth/: pyth.go  pyth_live_test.go
indexer/internal/scoring/: scoring.go  scoring_test.go  velocity.go
programs/reserve-sentinel/: Cargo.toml
programs/reserve-sentinel/src/: errors.rs  lib.rs  state.rs
programs/reserve-sentinel/src/instructions/: initialize_asset.rs  mod.rs  update_score.rs
scripts/: backtest.ts  dev_clickhouse.sh  init_assets.ts  localnet_roundtrip.sh
tests/: reserve-sentinel.ts
